# rusty-rmm

./: Cargo.toml  build.rs
.github/workflows/: rust.yml
doc/: feature-list.md
proto/: rustyrmm-endpoint.proto
rustyrmm-agent/: Cargo.toml  README.md
rustyrmm-agent/src/: error.rs  main.rs  system_info.rs
rustyrmm-proto/: Cargo.toml  README.md  build.rs
rustyrmm-proto/proto/: rustyrmm-endpoint.proto
rustyrmm-proto/src/: endpoint_registration.rs  lib.rs  rustyrmm.endpoint.rs
rustyrmm-server/: Cargo.toml  README.md
rustyrmm-server/.sqlx/: query-f33f69a796c1c8901772cba103f2f99ccd95c5141e590f9a0af711d211e4483c.json
rustyrmm-server/migrations/: 20231109085833_endpoint.sql
rustyrmm-server/scripts/: init_db.sh
rustyrmm-server/src/: cli.rs  configuration.rs  db.rs  lib.rs  main.rs  orm.rs  resource.rs  server.rs  startup.rs
rustyrmm-server/src/orm/: cpu.rs  cpu_info.rs  disk.rs  disk_info.rs  endpoint.rs  endpoint_detail.rs  mem_info.rs  mod.rs  net_if.rs  net_info.rs  os_info.rs
rustyrmm-server/src/resource/: cpu_info.rs  disk_info.rs  endpoint.rs  endpoint_detail.rs  mem_info.rs  mod.rs  net_info.rs  os_info.rs
rustyrmm-server/tests/api/: helpers.rs  main.rs  registration.rs
rustyrmm-types/: Cargo.toml
rustyrmm-types/src/: data.rs  ids.rs  lib.rs  registration_state.rs
scripts/: init_db.sh
src/: rustyrmm.endpoint.rs
src/cli/: main.rs
