[package]
name = "rusty-rmm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rustyrmmd"
path = "./src/server/main.rs"

[[bin]]
name = "rustyrmm-cli"
path = "./src/cli/main.rs"

[dependencies]
prost = "0.12.1"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.10.2"

[build-dependencies]
tonic-build = "0.10.2"
