[package]
name = "rustyrmm-agent"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/mtelahun/rusty-rmm"
license = "BSD-2-Clause"
description = "RustyRMM agent"
keywords = ["grpc", "network", "client"]
categories = ["os"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyrmm-proto = {path = "../rustyrmm-proto"}
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.10.2"
