[package]
name = "rustyrmm-agent"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/mtelahun/rusty-rmm"
license = "BSD-2-Clause"
description = "RustyRMM agent"
keywords = ["grpc", "network", "client"]
categories = ["os"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
machine-uid = "0.5.1"
rustyrmm-proto = {path = "../rustyrmm-proto"}
rustyrmm-types = {path = "../rustyrmm-types"}
sysinfo = "0.29.10"
time = { version = "0.3.30", features = ["local-offset", "formatting"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.10.2"
