[package]
name = "rustyrmm-proto"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/mtelahun/rusty-rmm"
license = "BSD-2-Clause"
description = "RustyRMM grpc libraries"
keywords = ["network", "grpc"]
categories = ["os"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.1"
tonic = "0.10.2"

[build-dependencies]
tonic-build = "0.10.2"
