[package]
name = "rustyrmm-server"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/mtelahun/rusty-rmm"
license = "BSD-2-Clause"
description = "RustyRMM server daemon"
keywords = ["grpc", "network", "server"]
categories = ["os"]
readme = "README.md"

[package.metadata.wix]
upgrade-guid = "D64353A9-640B-4B56-AC83-D92E65A72605"
path-guid = "55BD66B4-393D-4F83-B454-23E20F7334E6"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
config = "0.13.3"
mobc = "0.8.3"
mobc-postgres = { version = "0.8.0", features = ["with-chrono-0_4"] }
postgres-types = { version = "0.2.6", features = ["derive", "with-uuid-1"] }
rust_decimal = { version = "1.32.0", features = ["db-tokio-postgres"] }
rustyrmm-proto = {path = "../rustyrmm-proto"}
rustyrmm-types = {path = "../rustyrmm-types"}
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.192", features = ["derive"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "rust_decimal", "postgres", "uuid"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4", "with-uuid-1"] }
tonic = "0.10.2"
uuid = { version = "1.5.0", features = ["v4"] }

[dev-dependencies]
lazy_static = "1.4.0"
